fixed the full screen alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .overall-container {
-    width: 750px;
+    width: 800px;
     text-align: center;
 }
 
@@ -22,6 +22,7 @@ body {
     flex-direction: column;
     text-align: center;
     justify-content: center;
+
 
 }
 
@@ -42,12 +43,9 @@ h1 {
 #clock {
     border: 2px solid #32cd32;
     border-radius: 20px;
-    width: 100%;
     font-family: "whitrabt";
     font-size: 5rem;
     color: #32cd32;
-    margin-left: 200px;
-    margin-right: 200px;
     text-align: center;
     padding: 10px;
     transition: all 0.3s ease-in-out;
@@ -61,12 +59,9 @@ h1 {
 #clock-two {
     border: 2px solid #32cd32;
     border-radius: 20px;
-    width: 100%;
     font-family: "whitrabt";
     font-size: 5rem;
     color: #32cd32;
-    margin-left: 200px;
-    margin-right: 200px;
     text-align: center;
     padding: 10px;
     transition: all 0.3s ease-in-out;
